Basic add/edit item functionality
Created a reusable progress status component, removed unneeded boiler plate code, and got a structure to enter code manually.

--- a/frontend/pantry-ui/src/assets/main.css
+++ b/frontend/pantry-ui/src/assets/main.css
@@ -1,4 +1,4 @@
-@import './base.css';
+/* @import './base.css';
 
 #app {
   max-width: 1280px;
@@ -32,4 +32,73 @@ a,
     grid-template-columns: 1fr 1fr;
     padding: 0 2rem;
   }
+} */
+
+*,
+*::before,
+*::after {
+	box-sizing: inherit;
+    font-family: 'Segoe UI', Roboto, 'Helvetica Neue';
 }
+
+:root {
+  /* Borrowed from Vue's theme styles because I like the combinations */
+  --color-white: #ffffff;
+  --color-white-soft: #f8f8f8;
+  --color-white-mute: #f2f2f2;
+  --color-black: #181818;
+  --color-black-soft: #222222;
+
+  --color-gray: #505050;
+  --color-blue-on-dark: #54B7F0;
+  --color-blue-on-light: #4FF0D9;
+  --color-green: #00bd7e;
+
+  --primary-color: var(--color-green);
+  --secondary-color: var(--color-blue-on-dark);
+  --tertiary-color: var(--color-white-soft);
+
+  --background-color: var(--color-black-soft);
+  --foreground-color: var(--color-white-mute);
+
+  --important-small-font-size: 5vw;
+  
+  /* figure this out later - we will definitely use them */
+/*
+  --success-color:
+  --warning-color:
+  --danger-color:
+*/
+}
+
+body {
+  font-size: 1.5rem;
+  color: var(--color-black);
+  touch-action: manipulation; /* Disables double tap to zoom on mobile */
+}
+
+html, body {
+  background-color: var(--background-color);
+  margin: 0;
+  height: 100%;
+
+  display: flex;
+  flex-direction: column;
+}
+
+#app {
+    height: inherit;
+    width: inherit;
+}
+
+/* Common functionalities exposed globally - remove these as we want to move away from them... */
+.flex-horizontally {
+  display: flex;
+  flex-direction: column;
+}
+
+.flex-vertically {
+  display: flex;
+  flex-direction: row;
+}
+
