Add history view
Shows item history with meta information like the user who performed the action and a timestamp.

--- a/frontend/pantry-ui/src/assets/main.css
+++ b/frontend/pantry-ui/src/assets/main.css
@@ -50,7 +50,7 @@ a,
   --color-black-soft: #222222;
 
   --color-gray: #505050;
-  --color-blue-on-dark: #54B7F0;
+  --color-blue-on-dark: #0183FA;
   --color-blue-on-light: #4FF0D9;
   --color-green: #00bd7e;
   --color-red: #F04441;
